MODRS-63 - caiasSoft sample data